--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@noble/ciphers": "^1.3.0",
         "@openzeppelin/contracts": "^5.3.0",
         "canvas-confetti": "^1.9.3",
         "date-fns": "^4.1.0",
